--- a/client/app/15tunefish/band.html
+++ b/client/app/15tunefish/band.html
@@ -24,7 +24,7 @@
 
             <div class="btn-group pull-right">
                 <button class="btn btn-default btn-sm" add-all="band.tracks" title="Alle Titel zur Playlist hinzufügen">&nbsp;<i class="glyphicon glyphicon-list-alt"></i>&nbsp;</button>
-                <button class="btn btn-default btn-sm" play-all="band.tracks" title="Playlist leeren und alle Titel dieser Band abspielen"> <i class="glyphicon glyphicon-trash"></i> &amp; <i class="glyphicon glyphicon-list-alt"></i> </button>
+                <button class="btn btn-default btn-sm" clear-add-all="band.tracks" title="Playlist leeren und alle Titel dieser Band abspielen"> <i class="glyphicon glyphicon-trash"></i> &amp; <i class="glyphicon glyphicon-list-alt"></i> </button>
             </div>
 
             <h4>Songs</h4>
