Move angular things to src-folder to build with grunt

--- a/client/src/15tunefish/playlist.html
+++ b/client/src/15tunefish/playlist.html
@@ -1,5 +1,6 @@
 <div>
     <button class="btn btn-default pull-right" clear-playlist ng-show="playlist.length">Leeren</button>
+    <button class="btn btn-default pull-right" clear-voted ng-show="playlist.length">Rem. voted</button>
     <h2>Wiedergabeliste</h2>
 
     <div class="clearfix"></div>
